Funciona el template

--- a/src/app/components/money-goal/money-goal.component.html
+++ b/src/app/components/money-goal/money-goal.component.html
@@ -1,8 +1,8 @@
 <body class="bg-color">
   <!-- preloader section -->
-  <div class="page-loader">
+  <!-- <div class="page-loader">
     <div class="spinner"></div>
-  </div>
+  </div> -->
   <!-- page wrapper section -->
   <div id="wrapper"></div>
   <!-- Header Part -->
@@ -67,7 +67,7 @@
                 type="submit">Download for<i class="bi bi-android2 ms-2"></i></button>
             </div>
             <figure class="mb-0 hero-image">
-              <img src="/assets/images/hero/hero-pic.png" class="img-fluid " alt="hero image">
+              <img src="../../../assets/images/hero/hero-pic.png" class="img-fluid " alt="hero image">
             </figure>
           </div>
         </div>
