--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,10 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700;900&display=swap");
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css");
-@import url("bootstrap.min.css");
-@import url("owl.carousel.min.css");
-@import url("owl.theme.default.min.css");
-@import url("aos.css");
-@import url("gallery.css");
+@import url("../styles/bootstrap.min.css");
+@import url("../styles/owl.carousel.min.css");
+@import url("../styles/owl.theme.default.min.css");
+@import url("../styles/aos.css");
+@import url("../styles/gallery.css");
 /*-- font style --*/
 /*-- media query --*/
 * {
